--- a/Client/Shared/MainLayout.razor
+++ b/Client/Shared/MainLayout.razor
@@ -1,8 +1,4 @@
 ﻿@inherits LayoutComponentBase
-<div>
-    <div class="section columns">
-        <main class="column">
-            @Body
-        </main>
-    </div>
-</div>
+<main class="main-layout">
+    @Body
+</main>
