--- a/Client/wwwroot/css/app.css
+++ b/Client/wwwroot/css/app.css
@@ -1,11 +1,14 @@
-﻿body {
-    margin: 0;
-    padding: 0;
+﻿:root {
+    --page-background: #ba9e6e;
+    --background-color: #d7c68c;
+    --header-color: #4d3a32;
+    --text-color: #240b36ff;
+    --accent-color: #401F3E;
+
+    padding: 2% 10% 5%;
+    background-color: var(--page-background);
+
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
