--- a/Client/Shared/MainLayout.razor
+++ b/Client/Shared/MainLayout.razor
@@ -1,4 +1,9 @@
 ﻿@inherits LayoutComponentBase
 <main class="main-layout">
-    @Body
+    <div class="banner">
+        <h1>Snickar~Nils</h1>
+    </div>
+    <div class="main-content">
+        @Body
+    </div>
 </main>
