--- a/Client/wwwroot/css/app.css
+++ b/Client/wwwroot/css/app.css
@@ -4,11 +4,27 @@
     --header-color: #4d3a32;
     --text-color: #240b36ff;
     --accent-color: #401F3E;
-
-    padding: 2% 10% 5%;
+    
     background-color: var(--page-background);
 
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+}
+
+.banner {
+    display: flex;
+    align-items: center;
+    flex-flow: column;
+    padding: 0.3rem 0;
+    background-color: var(--accent-color);
+}
+
+    .banner h1 {
+        color: var(--background-color);
+        font-size: 2rem;
+    }
+
+.main-content {
+    padding: 2% 10% 5%;
 }
