--- a/Client/Shared/MainLayout.razor.css
+++ b/Client/Shared/MainLayout.razor.css
@@ -7,6 +7,7 @@
     border-bottom-width: 1px;
     border-bottom-style: solid;
     border-bottom-color: var(--text-color);
+    box-shadow: 0px 3px 8px -1px rgba(0,0,0,0.75);
 }
     .banner h1 {
         font-size: 2rem;
