--- a/Client/Shared/CollectionCover.razor
+++ b/Client/Shared/CollectionCover.razor
@@ -12,6 +12,10 @@
         </div>
     </div>
 }
+else
+{
+    <i class="fas fa-circle-notch fa-spin fa-lg" style="margin:1rem 0.85rem;"></i>
+}
 
 @code {
 
