--- a/Client/Pages/Collection.razor
+++ b/Client/Pages/Collection.razor
@@ -18,6 +18,10 @@
         <img src="@uri" />
     }
 }
+else
+{
+    <i class="fas fa-circle-notch fa-spin fa-lg" style="margin:1rem 0.85rem;"></i>
+}
 
 @code {
     [Parameter] 
