Remove descrition from collection page

--- a/Client/Pages/Collection.razor
+++ b/Client/Pages/Collection.razor
@@ -8,15 +8,17 @@
         @imageCollection.Description
     </div>
 
-    if (!string.IsNullOrEmpty(imageCollection.CoverImageUri))
-    {
-        <img src="@imageCollection.CoverImageUri" />
-    }
+    <div class="img-container">
+        @if (!string.IsNullOrEmpty(imageCollection.CoverImageUri))
+        {
+            <img src="@imageCollection.CoverImageUri" />
+        }
 
-    @foreach (string uri in imageCollection.ImageUris)
-    {
-        <img src="@uri" />
-    }
+        @foreach (string uri in imageCollection.ImageUris)
+        {
+            <img src="@uri" />
+        }
+    </div>
 }
 else
 {
