--- a/Client/Pages/Collection.razor.css
+++ b/Client/Pages/Collection.razor.css
@@ -3,5 +3,11 @@
     color: var(--text-color);
 }
 
+.img-container {
+    display: grid;
+    gap: 1rem;
+    grid-template-columns:repeat(auto-fit, minmax(1fr, 10fr));
+}
+
 img {
 }
