Revert "Remove descrition from collection page"
This reverts commit 444a1a08aa33cd335e8bf140d6ed0ff875ccbf32.

--- a/Client/Pages/Collection.razor
+++ b/Client/Pages/Collection.razor
@@ -8,17 +8,15 @@
         @imageCollection.Description
     </div>
 
-    <div class="img-container">
-        @if (!string.IsNullOrEmpty(imageCollection.CoverImageUri))
-        {
-            <img src="@imageCollection.CoverImageUri" />
-        }
+    if (!string.IsNullOrEmpty(imageCollection.CoverImageUri))
+    {
+        <img src="@imageCollection.CoverImageUri" />
+    }
 
-        @foreach (string uri in imageCollection.ImageUris)
-        {
-            <img src="@uri" />
-        }
-    </div>
+    @foreach (string uri in imageCollection.ImageUris)
+    {
+        <img src="@uri" />
+    }
 }
 else
 {
