--- a/Client/Pages/Collection.razor.css
+++ b/Client/Pages/Collection.razor.css
@@ -3,5 +3,11 @@
     color: var(--text-color);
 }
 
-img {
+.img-wrapper {
+    display: flex;
+    max-height: 90vh;
+    margin-bottom: 1rem;
 }
+    .img-wrapper img {
+        object-fit: contain;
+    }
