--- a/Client/Pages/Overview.razor.css
+++ b/Client/Pages/Overview.razor.css
@@ -1,5 +1,7 @@
 ﻿.covers {
     display: grid;
-    gap: 2rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    gap: 1rem;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
