--- a/Client/Pages/Overview.razor
+++ b/Client/Pages/Overview.razor
@@ -10,6 +10,8 @@
                 <CollectionCover ImageCollectionSummary="imageCollectionSummary"></CollectionCover>
             }
         </div>
+        
+        <CopyrightFooter />
     }
     else
     {
