--- a/Client/Pages/Collection.razor
+++ b/Client/Pages/Collection.razor
@@ -11,7 +11,7 @@
         </div>
     }
 
-    @foreach (string uri in imageCollection.ImageUris)
+    foreach (string uri in imageCollection.ImageUris)
     {
         <div class="img-wrapper">
             <img src="@uri" />
