--- a/Client/Pages/Overview.razor.css
+++ b/Client/Pages/Overview.razor.css
@@ -1,7 +1,11 @@
 ﻿.covers {
-    display: grid;
     padding-left: 1rem;
     padding-right: 1rem;
-    gap: 1rem;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+}
+
+@media screen and (min-width: 800px) {
+    .covers {
+        columns: 2 400px;
+        column-gap: 1rem;
+    }
 }
