--- a/Client/Pages/Overview.razor
+++ b/Client/Pages/Overview.razor
@@ -2,21 +2,28 @@
 @inject HttpClient http
 @inject NavigationManager navigation
 
-    @if (imageCollectionSummaries != null)
+
+<div class="covers">
+
+    @if (imageCollectionSummaries == null)
     {
-        <div class="covers">
-            @foreach (ImageCollectionSummary imageCollectionSummary in imageCollectionSummaries)
-            {
-                <CollectionCover ImageCollectionSummary="imageCollectionSummary"></CollectionCover>
-            }
-        </div>
-        
-        <CopyrightFooter />
+        @for (int i = 0; i < 10; i++)
+        {
+            <CollectionPlaceHolder />
+        }
     }
     else
     {
-        <i class="fas fa-circle-notch fa-spin fa-lg" style="margin:1rem 0.85rem;"></i>
+        @foreach (ImageCollectionSummary imageCollectionSummary in imageCollectionSummaries)
+        {
+            <CollectionCover ImageCollectionSummary="imageCollectionSummary"></CollectionCover>
+        }
     }
+
+</div>
+
+<CopyrightFooter />
+    
 
 @code {
     private List<ImageCollectionSummary> imageCollectionSummaries;
