--- a/Client/Shared/CollectionCover.razor.css
+++ b/Client/Shared/CollectionCover.razor.css
@@ -1,21 +1,4 @@
-﻿.tile {
-    display: flex;
-    flex-direction: column;
-    border: solid;
-    border-width: 1px;
-    border-radius: 4px;
-    border-color: var(--accent-color);
-    cursor: pointer;
-    box-shadow: 3px 3px 7px -1px rgba(0,0,0,0.75);
-    overflow: hidden;
-    margin-bottom: 1rem;
-}
-
-    .tile:hover {
-        box-shadow: 2px 2px 6px -1px rgba(0,0,0,0.75);
-    }
-
-.image{
+﻿.image{
 
 }
 
